--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>TRANG CHỦ F8BET</title>
+    <title>VND789</title>
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Expires" content="-1">
@@ -56,7 +56,7 @@
     </script>
     <link rel="canonical" href="https://preview.ldpdemo.com/6817717a4984ea00a4caedee" />
     <meta property="og:url" content="http://preview.ldpdemo.com/6817717a4984ea00a4caedee" />
-    <meta property="og:title" content="TRANG CHỦ F8BET" />
+    <meta property="og:title" content="VND789" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="PHIÊN BẢN PRO 2025 - 2" />
     <meta name="format-detection" content="telephone=no" />
@@ -912,7 +912,8 @@
         }
 
         #IMAGE11>.ladi-image>.ladi-image-background {
-            background-image: url("./w.ladicdn.com/s500x400/66f1588fc4be0b0074e1c09a/f8bet_1-20250103044418-oihya.png");
+            /* background-image: url("./w.ladicdn.com/s500x400/66f1588fc4be0b0074e1c09a/f8bet_1-20250103044418-oihya.png"); */
+            background-image: url("./w.ladicdn.com/images/avatar-5.png");
         }
 
         #IMAGE19>.ladi-image>.ladi-image-background {
@@ -1062,20 +1063,14 @@
 
             #IMAGE11 {
                 width: 171px;
-                height: 71.25px;
-                top: 0px;
+                height: 75px;
                 left: 384.5px;
-            }
-
-            #IMAGE11>.ladi-image>.ladi-image-background {
-                width: 171px;
-                height: 71.25px;
             }
 
             #IMAGE19 {
                 width: 200px;
                 height: 55.9767px;
-                top: 86.9673px;
+                top: 90px;
                 left: 379.998px;
             }
 
@@ -1098,42 +1093,45 @@
             }
 
             #IMAGE12 {
-                width: 573.019px;
+                width: 727px;
                 height: 138.056px;
-                top: 690.044px;
-                left: 183.49px;
+                top: 730.044px;
+                left: 89.49px;
             }
 
             #IMAGE12>.ladi-image>.ladi-image-background {
-                width: 573.019px;
+                /* width: 573.019px;
                 height: 138.056px;
-                background-image: url("./w.ladicdn.com/s900x450/66f1588fc4be0b0074e1c09a/nap-dau-thuong-100-1_0004_vector-smart-object-20250330075300-rwazr.png");
+                background-image: url("./w.ladicdn.com/s900x450/66f1588fc4be0b0074e1c09a/nap-dau-thuong-100-1_0004_vector-smart-object-20250330075300-rwazr.png"); */
+                background-image: url("./w.ladicdn.com/images/image-5.png");
             }
 
             #IMAGE18 {
-                width: 378.896px;
+                width: 480.896px;
                 height: 78.3646px;
                 top: 377.435px;
                 left: 677px;
             }
 
             #IMAGE18>.ladi-image>.ladi-image-background {
-                width: 378.896px;
-                height: 78.3646px;
-                background-image: url("./w.ladicdn.com/s700x400/66f1588fc4be0b0074e1c09a/mau_0002_layer-3-20250416132836-ydxvw.png");
+                /* width: 378.896px;
+                height: 78.3646px; */
+                /* background-image: url("./w.ladicdn.com/s700x400/66f1588fc4be0b0074e1c09a/mau_0002_layer-3-20250416132836-ydxvw.png"); */
+                background-image: url("./w.ladicdn.com/images/image-4.png");
             }
 
             #IMAGE17 {
-                width: 385.16px;
+                width: 410.16px;
                 height: 71.435px;
-                top: 440px;
-                left: -69.464px;
+                top: 450px;
+                left: -90.464px;
             }
 
             #IMAGE17>.ladi-image>.ladi-image-background {
-                width: 385.16px;
+                /* width: 385.16px;
                 height: 71.435px;
-                background-image: url("./w.ladicdn.com/s700x400/66f1588fc4be0b0074e1c09a/mau_0001_layer-4-20250416132836-sy8rw.png");
+                background-image: url("./w.ladicdn.com/s700x400/66f1588fc4be0b0074e1c09a/mau_0001_layer-4-20250416132836-sy8rw.png"); */
+                background-image: url("./w.ladicdn.com/images/image-2.png");
             }
 
             #BUTTON7 {
@@ -1144,7 +1142,8 @@
             }
 
             #BUTTON7>.ladi-button>.ladi-button-background {
-                background-image: url("./w.ladicdn.com/s414x92/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png");
+                /* background-image: url("./w.ladicdn.com/s414x92/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png"); */
+                background-image: url("./w.ladicdn.com/images/image-1.png");
             }
         }
 
@@ -1176,14 +1175,9 @@
 
             #IMAGE11 {
                 width: 172.8px;
-                height: 72px;
+                height: 75px;
                 top: 9px;
                 left: 127.2px;
-            }
-
-            #IMAGE11>.ladi-image>.ladi-image-background {
-                width: 172.8px;
-                height: 72px;
             }
 
             #IMAGE19 {
@@ -1201,7 +1195,7 @@
             #IMAGE21 {
                 width: 407.08px;
                 height: 304.701px;
-                top: 468.722px;
+                top: 450.722px;
                 left: 10.06px;
             }
 
@@ -1212,42 +1206,45 @@
             }
 
             #IMAGE12 {
-                width: 382.626px;
+                width: 485.626px;
                 height: 92.1851px;
-                top: 717.644px;
-                left: 18.687px;
+                top: 730.644px;
+                left: -55.313px;
             }
 
             #IMAGE12>.ladi-image>.ladi-image-background {
-                width: 382.626px;
+                /* width: 382.626px;
                 height: 92.1851px;
-                background-image: url("./w.ladicdn.com/s700x400/66f1588fc4be0b0074e1c09a/nap-dau-thuong-100-1_0004_vector-smart-object-20250330075300-rwazr.png");
+                background-image: url("./w.ladicdn.com/s700x400/66f1588fc4be0b0074e1c09a/nap-dau-thuong-100-1_0004_vector-smart-object-20250330075300-rwazr.png"); */
+                background-image: url("./w.ladicdn.com/images/image-5.png");
             }
 
             #IMAGE18 {
-                width: 243.515px;
+                width: 290.515px;
                 height: 50.3646px;
                 top: 296.5px;
                 left: 0px;
             }
 
             #IMAGE18>.ladi-image>.ladi-image-background {
-                width: 243.515px;
+                /* width: 243.515px;
                 height: 50.3646px;
-                background-image: url("./w.ladicdn.com/s550x400/66f1588fc4be0b0074e1c09a/mau_0002_layer-3-20250416132836-ydxvw.png");
+                background-image: url("./w.ladicdn.com/s550x400/66f1588fc4be0b0074e1c09a/mau_0002_layer-3-20250416132836-ydxvw.png"); */
+                background-image: url("./w.ladicdn.com/images/image-4.png");
             }
 
             #IMAGE17 {
                 width: 237.742px;
                 height: 44.0937px;
                 top: 371.136px;
-                left: 173.798px;
+                left: 170.798px;
             }
 
             #IMAGE17>.ladi-image>.ladi-image-background {
-                width: 237.742px;
+                /* width: 237.742px;
                 height: 44.0937px;
-                background-image: url("./w.ladicdn.com/s550x350/66f1588fc4be0b0074e1c09a/mau_0001_layer-4-20250416132836-sy8rw.png");
+                background-image: url("./w.ladicdn.com/s550x350/66f1588fc4be0b0074e1c09a/mau_0001_layer-4-20250416132836-sy8rw.png"); */
+                background-image: url("./w.ladicdn.com/images/image-2.png");
             }
 
             #BUTTON7 {
@@ -1258,7 +1255,8 @@
             }
 
             #BUTTON7>.ladi-button>.ladi-button-background {
-                background-image: url("./w.ladicdn.com/s340x75/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png");
+                /* background-image: url("./w.ladicdn.com/s340x75/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png"); */
+                background-image: url("./w.ladicdn.com/images/image-1.png");
             }
         }
     </style>
@@ -1289,7 +1287,24 @@
         }
     </style>
     
-
+    <!-- Meta Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '417092643975166');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=417092643975166&ev=PageView&noscript=1" /></noscript>
+    <!-- End Meta Pixel Code -->
 </head>
 
 <body class="lazyload">
@@ -1336,7 +1351,7 @@
                     <div class='ladi-image'>
                         <div class="ladi-image-background"></div>
                     </div>
-                </div><a href="https://vf8bet3.cc/Register?f=5905631" target="_blank" id="BUTTON7" class='ladi-element'>
+                </div><a href="https://vnd789.net/af/831ug0R2/789winvip" target="_blank" id="BUTTON7" class='ladi-element'>
                     <div class='ladi-button'>
                         <div class="ladi-button-background"></div>
                         <div id="BUTTON_TEXT7" class='ladi-element ladi-button-headline'>
@@ -1355,7 +1370,7 @@
                         <div class="ladi-overlay"></div>
                         <div id="HEADLINE5" class='ladi-element'>
                             <h3 class='ladi-headline'>BẠN CÓ TRÊN 18+ KHÔNG</h3>
-                        </div><a href="https://vf8bet3.cc/Register?f=5905631" target="_blank" id="BUTTON3"
+                        </div><a href="https://vnd789.net/af/831ug0R2/789winvip" target="_blank" id="BUTTON3"
                             class='ladi-element'>
                             <div class='ladi-button'>
                                 <div class="ladi-button-background"></div>
@@ -1363,7 +1378,7 @@
                                     <p class='ladi-headline'>CÓ</p>
                                 </div>
                             </div>
-                        </a><a href="https://vf8bet3.cc/Register?f=5905631" target="_blank" id="BUTTON4"
+                        </a><a href="https://vnd789.net/af/831ug0R2/789winvip" target="_blank" id="BUTTON4"
                             class='ladi-element'>
                             <div class='ladi-button'>
                                 <div class="ladi-button-background"></div>
@@ -1494,7 +1509,7 @@
                 "cs": [{
                     "dr": "action",
                     "dv": "_blank",
-                    "dw": "https://vf8bet3.cc/Register?f=5905631",
+                    "dw": "https://vnd789.net/af/831ug0R2/789winvip",
                     "a": "link"
                 }]
             },
@@ -1503,7 +1518,7 @@
                 "cs": [{
                     "dr": "action",
                     "dv": "_blank",
-                    "dw": "https://vf8bet3.cc/Register?f=5905631",
+                    "dw": "https://vnd789.net/af/831ug0R2/789winvip",
                     "a": "link"
                 }]
             },
@@ -1512,7 +1527,7 @@
                 "cs": [{
                     "dr": "action",
                     "dv": "_blank",
-                    "dw": "https://vf8bet3.cc/Register?f=5905631",
+                    "dw": "https://vnd789.net/af/831ug0R2/789winvip",
                     "a": "link"
                 }],
                 "F": "pulse",
