--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     <meta property="og:description" content="PHIÊN BẢN PRO 2025 - 2" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="icon" type="image/x-icon"
-        href="./w.ladicdn.com_443/66f1588fc4be0b0074e1c09a/f8bet_2-color-05-20250430073459-zkkvc.png" />
+        href="./w.ladicdn.com/images/avatar-5.png" />
     <link rel="shortcut icon"
-        href="./w.ladicdn.com_443/66f1588fc4be0b0074e1c09a/f8bet_2-color-05-20250430073459-zkkvc.png" />
+        href="./w.ladicdn.com/images/avatar-5.png" />
     <link rel="apple-touch-icon"
-        href="./w.ladicdn.com_443/66f1588fc4be0b0074e1c09a/f8bet_2-color-05-20250430073459-zkkvc.png" />
+        href="./w.ladicdn.com/images/avatar-5.png" />
     <link rel="apple-touch-icon-precomposed"
-        href="./w.ladicdn.com_443/66f1588fc4be0b0074e1c09a/f8bet_2-color-05-20250430073459-zkkvc.png" />
+        href="./w.ladicdn.com/images/avatar-5.png" />
     <meta name="msapplication-TileImage"
-        content="https://static.ladipage.net/66f1588fc4be0b0074e1c09a/f8bet_2-color-05-20250430073459-zkkvc.png" />
+        content="https://static.ladipage/images/avatar-5.png" />
     <meta name="revisit-after" content="days" />
     <link rel="dns-prefetch">
     <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
@@ -912,7 +912,6 @@
         }
 
         #IMAGE11>.ladi-image>.ladi-image-background {
-            /* background-image: url("./w.ladicdn.com/s500x400/66f1588fc4be0b0074e1c09a/f8bet_1-20250103044418-oihya.png"); */
             background-image: url("./w.ladicdn.com/images/avatar-5.png");
         }
 
@@ -1143,7 +1142,7 @@
 
             #BUTTON7>.ladi-button>.ladi-button-background {
                 /* background-image: url("./w.ladicdn.com/s414x92/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png"); */
-                background-image: url("./w.ladicdn.com/images/image-1.png");
+                background-image: url("./w.ladicdn.com/images/image-6.png");
             }
         }
 
@@ -1256,7 +1255,7 @@
 
             #BUTTON7>.ladi-button>.ladi-button-background {
                 /* background-image: url("./w.ladicdn.com/s340x75/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png"); */
-                background-image: url("./w.ladicdn.com/images/image-1.png");
+                background-image: url("./w.ladicdn.com/images/image-6.png");
             }
         }
     </style>
