--- a/index.html
+++ b/index.html
@@ -1134,10 +1134,10 @@
             }
 
             #BUTTON7 {
-                width: 414.648px;
-                height: 92px;
+                width: 500.648px;
+                height: 120px;
                 top: 163.439px;
-                left: 272.674px;
+                left: 220.674px;
             }
 
             #BUTTON7>.ladi-button>.ladi-button-background {
@@ -1350,7 +1350,8 @@
                     <div class='ladi-image'>
                         <div class="ladi-image-background"></div>
                     </div>
-                </div><a href="https://vnd789.net/af/831ug0R2/789winvip" target="_blank" id="BUTTON7" class='ladi-element'>
+                </div>
+                <a href="https://vnd789.net/af/831ug0R2/789winvip" target="_blank" id="BUTTON7" class='ladi-element'>
                     <div class='ladi-button'>
                         <div class="ladi-button-background"></div>
                         <div id="BUTTON_TEXT7" class='ladi-element ladi-button-headline'>
