--- a/index.html
+++ b/index.html
@@ -1134,15 +1134,15 @@
             }
 
             #BUTTON7 {
-                width: 500.648px;
-                height: 120px;
+                width: 414.648px;
+                height: 92px;
                 top: 163.439px;
-                left: 220.674px;
+                left: 272.674px;
             }
 
             #BUTTON7>.ladi-button>.ladi-button-background {
-                /* background-image: url("./w.ladicdn.com/s414x92/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png"); */
-                background-image: url("./w.ladicdn.com/images/image-6.png");
+                background-image: url("./w.ladicdn.com/s414x92/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png");
+                /* background-image: url("./w.ladicdn.com/images/image-6.png"); */
             }
         }
 
