--- a/index.html
+++ b/index.html
@@ -1141,8 +1141,8 @@
             }
 
             #BUTTON7>.ladi-button>.ladi-button-background {
-                background-image: url("./w.ladicdn.com/s414x92/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png");
-                /* background-image: url("./w.ladicdn.com/images/image-6.png"); */
+                /* background-image: url("./w.ladicdn.com/s414x92/66f1588fc4be0b0074e1c09a/4-20250409141345-x1uiw.png"); */
+                background-image: url("./w.ladicdn.com/images/image-6.png");
             }
         }
 
@@ -1354,14 +1354,14 @@
                 <a href="https://vnd789.net/af/831ug0R2/789winvip" target="_blank" id="BUTTON7" class='ladi-element'>
                     <div class='ladi-button'>
                         <div class="ladi-button-background"></div>
-                        <div id="BUTTON_TEXT7" class='ladi-element ladi-button-headline'>
+                        <!-- <div id="BUTTON_TEXT7" class='ladi-element ladi-button-headline'>
                             <p class='ladi-headline'>Buy Now</p>
-                        </div>
+                        </div> -->
                     </div>
                 </a>
             </div>
         </div>
-        <div id="SECTION_POPUP" class='ladi-section'>
+        <!-- <div id="SECTION_POPUP" class='ladi-section'>
             <div class='ladi-section-background'></div>
             <div class="ladi-container">
                 <div id="POPUP1" class='ladi-element'>
@@ -1390,7 +1390,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div id="backdrop-popup" class="backdrop-popup"></div>
     <div id="backdrop-dropbox" class="backdrop-dropbox"></div>
